# oncogeriatrics-health-economics

./: .gitignore  Makefile  README.md  assumptions.yaml  calc.py  calculate.py  explore.csv  get_params.py  license.md  model.py  pyproject.toml  pyvenv.cfg
data/: outcomes.tsv  parameters.json  parameters.yaml  utilisation_costs.tsv  utilisation_costs.yaml
markov_chains/: chemotoxicity.py  mortality.py  treatment_change.py
templates/: posttreatment_costs.tsv  pretreatment_costs.tsv
